@@ -1,3 +1,4 @@
+configure
 autom4te.cache
 Makefile.in
 aclocal.m4
