@@ -1,0 +1,15 @@
+gphoto2/actions.c
+gphoto2/actions.h
+gphoto2/foreach.c
+gphoto2/foreach.h
+gphoto2/gphoto2-cmd-capture.c
+gphoto2/gphoto2-cmd-capture.h
+gphoto2/gphoto2-cmd-config.c
+gphoto2/gphoto2-cmd-config.h
+gphoto2/main.c
+gphoto2/options.c
+gphoto2/options.h
+gphoto2/range.c
+gphoto2/range.h
+gphoto2/shell.c
+gphoto2/shell.h
